hphp/test/slow/parser/unset_class_constant.php.expectf
Fatal error: Cannot mutate a class constant in %s/unset_class_constant.php on line 10
